--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Fazendinha</title>
+    <title>Chaves</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,31 +18,31 @@
 </head>
 <body>
 
-    <h1>Fazenda do Tio João</h1>
+    <h1>Seriado-Chaves</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_boi">Boi</button>
-        <button class="tecla tecla_cachorro">Cão</button>
-        <button class="tecla tecla_cavalo">Cavalo</button>
+        <button class="tecla tecla_burro">Burro</button>
+        <button class="tecla tecla_conta">Conta</button>
+        <button class="tecla tecla_irrite">Irrite</button>
 
-        <button class="tecla tecla_gato">Gato</button>
-        <button class="tecla tecla_ovelha">Ovelha</button>
-        <button class="tecla tecla_papagaio">Louro</button>
+        <button class="tecla tecla_isso">Isso</button>
+        <button class="tecla tecla_ladrao">Ladrão</button>
+        <button class="tecla tecla_nao">Não</button>
 
-        <button class="tecla tecla_passaro">Pássaro</button>
-        <button class="tecla tecla_pato">Pato</button>
-        <button class="tecla tecla_porco">Porco</button>
+        <button class="tecla tecla_risada">Risada</button>
+        <button class="tecla tecla_tesouro">Tesouro</button>
+        <button class="tecla tecla_tinha">Tinha</button>
     </section>
 
-    <audio src="sounds/Boi.wav" id="som_tecla_boi"></audio>
-    <audio src="sounds/Cachorro.wav" id="som_tecla_cachorro"></audio>
-    <audio src="sounds/Cavalo.wav" id="som_tecla_cavalo"></audio>
-    <audio src="sounds/Gato.wav" id="som_tecla_gato"></audio>
-    <audio src="sounds/Ovelha.wav" id="som_tecla_ovelha"></audio>
-    <audio src="sounds/Papagaio.wav" id="som_tecla_papagaio"></audio>
-    <audio src="sounds/Pássaro.wav" id="som_tecla_passaro"></audio>
-    <audio src="sounds/Pato.wav" id="som_tecla_pato"></audio>
-    <audio src="sounds/Porco.mp3" id="som_tecla_porco"></audio>
+    <audio src="Sounds/Burro.mp3" id="som_tecla_burro"></audio>
+    <audio src="Sounds/Conta.mp3" id="som_tecla_conta"></audio>
+    <audio src="Sounds/Irrite.mp3" id="som_tecla_irrite"></audio>
+    <audio src="Sounds/Isso.mp3" id="som_tecla_isso"></audio>
+    <audio src="Sounds/Ladrão.mp3" id="som_tecla_ladrao"></audio>
+    <audio src="Sounds/Não.mp3" id="som_tecla_nao"></audio>
+    <audio src="Sounds/Risada.mp3" id="som_tecla_risada"></audio>
+    <audio src="Sounds/Tesouro.mp3" id="som_tecla_tesouro"></audio>
+    <audio src="Sounds/Tinha.mp3" id="som_tecla_tinha"></audio>
 <script src="main.js"></script>
  </body>
 </html>
